<resources>
    <string name="app_name">Андроид 1 ДЗ №1</string>
    <string name="text_name">Атрибуты EditText</string>
    <string name="plain_text">Просто текст</string>
    <string name="text_label">Атрибуты EditText</string>
    <string name="pswd_text">password123</string>
    <string name="phone_text">+7 999 12 34 567</string>
    <string name="number_text">1234567890</string>
    <string name="mail_text">ivan123@mail.ru</string>
    <string name="date_text">17/3/2021</string>
    <string name="buttonBack_text">Обратно</string>
    <string name="main_label">Пользовательские элементы</string>
    <string name="edit1_text">Привет</string>
    <string name="edit2_text">Андроид!</string>
    <string name="check_text">Поставь птичку</string>
    <string name="toggle_text">ToggleButton</string>
    <string name="buttonNext_text">Далее</string>
    <string name="person_text">Иван Иванов</string>
    <string name="switch_text">Переключи</string>
</resources>