<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_main"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_right"
        android:background="@color/back_main"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/main_label"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/text_size" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_right"
        android:background="#E4A5A5"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/edit1_text"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/text_size" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_right"
        android:background="#D7DF88"
        android:fontFamily="serif"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/edit2_text"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/text_size" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:background="@color/back_main"
            android:gravity="center"
            android:text="@string/switch_text" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:background="@color/back_main"
            android:gravity="center"
            android:text="@string/check_text" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="#7FC377"
            android:checked="false"
            android:text="@string/toggle_text" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_weight="1"
            android:backgroundTint="#6C529C"
            android:text="@string/buttonNext_text" />
    </LinearLayout>
</LinearLayout>

